@@ -32,6 +32,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #6075: IDLE on Mac OS X now works with both Carbon AquaTk and
+  Cocoa AquaTk.
+
 - Issue #10916: mmap should not segfault when a file is mapped using 0 as
   length and a non-zero offset, and an attempt to read past the end of file
   is made (IndexError is raised instead).  Patch by Ross Lagerwall.
